--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,20 @@ project(imi)
 
 set(CURSES_NEED_NCURSES TRUE)
 find_package(Curses REQUIRED)
-include_directories(${CURSES_INCLUDE_DIRS})
+include_directories(${CURSES_INCLUDE_DIRS} ${LIB_BSD})
+set(LIB_BSD_FILE /usr/lib/libbsd.so)
 
 add_executable(imi
    src/imi.c
-   src/word.c
-   src/wordmenu.c
+   src/worddef.c
+   src/defmenu.c
+   src/parse.c
 )
 
 if(MSVC)
     target_compile_options(imi PRIVATE /W4 /WX)
 else()
-    target_compile_options(imi PRIVATE -Wall -Wextra -pedantic)
+    target_compile_options(imi PRIVATE -Wall -Wextra -pedantic -lbsd)
 endif()
 
-target_link_libraries(imi ${CURSES_LIBRARIES}) 
+target_link_libraries(imi ${CURSES_LIBRARIES} ${LIB_BSD_FILE}) 
